css/style.css
:root {
    /* Light mode variables */
    --background-color: #FAF4E8;
    --text-color: #00383D;
    --link-color: #F1DA63;
    --header-background: #00383D;
    --header-text-color: #FAF4E8;
    --highlight-color: #FE763A;
    --text-highlight:#F1DA63; 

    /* Dark mode variables */
    --dark-background-color: #1E1E1E;
    --dark-text-color: #FFFFFF;
    --dark-link-color: #FFD700;
    --dark-header-background: #121212;
    --dark-header-text-color: #FFFFFF;
    --dark-highlight-color: #FF5722;
    --dark-text-highlight: #121212; 
}

body{
    background-color: var(--background-color);
    font-family: Arial, Helvetica, sans-serif;
    margin: 20px;
    font-size: 14px;
}

/* style nav bar */
nav{
    background-color: var(--header-background);
    padding: 20px;
    margin: -20px -20px -20px -20px;
}

nav ul{
    list-style-type: none;
}

/* style nav bar text */
ul li a {
    text-decoration: none; 
    display: block; 
    color: var(--link-color);
    padding: 5px;
    font-weight: bold;
}

/* style meets bullets in the index page */
#meets ul li a{
    color:var(--text-color);
    text-decoration: underline;
}

/* for all when focus draw an orange box around it */
*:focus{
    border: 5px solid #FE763A;
}

/* focus on skip to main content only when you tab into it else don't show */
.skip{
    position: absolute;
    top: -500px;
}
  
.skip:focus{
    position: absolute;
    top:10px;
    right: 20px;
    color: #F1DA63;
}

/* Style header */
header {
    background-color: var(--header-background);
    color: var(--header-text-color);
    padding: 20px;;
    margin: 10px -20px;  /* Override left margin */
    border-bottom-left-radius: 50px;
    border-bottom-right-radius: 50px;
    /* making sure it sticks to top of page */
    position: sticky;
    top: 0;
    z-index: 1;
}

header a {
    text-decoration: none; /* Remove underline from links */
    color: inherit;
}

h1{
    color: var(--highlight-color);
    font-size: 28px;
}

header h2{
    font-size: 20px;
}

section{
    padding-top: 30px;
    padding-bottom: 40px;
}

p {
    color: var(--text-color);
    opacity: 0;
    animation: fadeIn 3s forwards;
}

@keyframes fadeIn {
    to {
        opacity: 1; /* Fade in */
    }
}
section h2{
    text-align: center;
    text-transform: uppercase;
    padding-top: 20px;
    padding-bottom: 20px;
    color: var(--text-color);
    animation-duration: 2s;
    animation-name: pulse;
    animation-iteration-count: infinite;
    animation-timing-function: ease-in-out;
}

/* Slide section headers pulse */
@keyframes pulse {
    0%, 100% {
        transform: scale(1); /* Original size and position */
    }
    50% {
        transform: scale(1.08); /* Scale up and move to the right */
    }
}

/* style the results section */
#team-results{
    background-color: var(--highlight-color);
    margin: 20px -20px;
    padding: 30px 20px;
}

/* make the result table scrollable so that it 
doesn't take up a lot of space */
.results_table{
    overflow-y: auto;
    border-radius: 30px;
}

/* style header of results table */
.results_table thead th {
    text-align: left;
    padding: 15px 25px;
    background-color:var(--header-background);
    color:var(--link-color);
    font-weight: bold;
}

tr:focus{
    border: 10px solid var(--text-color);
}

td{
    padding: 15px 25px;
    color: #00383D;
}

/* styling alternating rows in the index page */
#meets li:nth-child(odd) {
    background-color: var(--text-highlight);
}

/* styling alternating rows */
tr:nth-child(odd){
    background-color: var(--link-color);
}
tr:nth-child(even){
    background-color: var(--header-text-color);
}


table{
    width: 100%;
    border-collapse: collapse;
    overflow: hidden; /* make sure the border radius would show */
}

/* style each athletes stats */
#individual-results .athlete {
    width: 70vw;
    background-color:var(--header-background);
    color: var(--header-text-color);
    display: inline-grid;
    border: solid 2px var(--text-color);
    border-radius: 20px;
    gap: 20px;
    margin: 10px auto;
    opacity: 0.5;
    transition-property: opacity;
    transition-duration: 0.2s;
    transition-timing-function: linear;
}

#individual-results .athlete:hover,
#individual-results .athlete:focus{
    border: 5px #FF5722 solid;
    opacity: 1;
}

/* style footer */
footer{
    border-top-left-radius: 50px;
    border-top-right-radius: 50px;
    background-color: var(--header-background);
    color:var(--header-text-color);
    margin: -20px -20px;
    padding: 20px 20px;
}

footer p{
    color:var(--highlight-color);
    font-size: 12px;
}

footer a{
    color: var(--highlight-color);
    text-decoration: none;
}

/* style atheete results section */
.athlete-container {
    display: grid;
    grid-template-columns: 95vw; /*one column to optimize for mobile*/
    justify-content: center;
    perspective: 600;
}


.athlete figure {
    cursor: pointer; /* Indicate it can be interacted with */
    outline: none; /* Remove default outline */
}

.athlete dl {
    display: none; /* Hide the details by default */
    transition: all 0.3s linear; /* Smooth transition */
}

figcaption {
    text-transform: uppercase;
    text-decoration: underline;
    font-weight: bold;
    padding: 10px;
    padding-bottom: 0px;
}

/* style image */
figure img{
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
    width:100%;
    margin: auto;
}


/* style flashcard so stats info show when hover */
.athlete:hover dl,
.athlete:focus-within dl {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: repeat(3, auto);
    row-gap: 10px;
    padding: 0px 10px 10px 10px;
}

dt {
    font-weight: bold;
    color:var(--highlight-color);
    display: inline;
}


/* style gallery grid*/
#gallery {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-content: space-around;
    gap: 20px;
}

/* style gallery image*/
#gallery img{
    border-radius: 20px;
    width: 100%;
    opacity: 0.5;
    transition: opacity 0.2s linear, transform 0.2s linear;
}

/* increase opacity of image when it is hover */
#gallery img:hover,
#gallery img:focus {
    opacity: 1;
    transform: scale(1.1); /* Zoom in by 10% */
    outline: none;  /* Optional: removes the default focus outline */
}

/* reduce animations for preferred users */
@media screen and (prefers-reduced-motion: reduce) {
    /* Disable animations */
    p {
        opacity: 1; /* make text visible */
        animation: none; /* Disable fade-in animation */
    }

    section h2 {
        animation-name: none; /* Disable pulse animation */
    }

    /* Disable hover effects */
    div {
        transition: none; /* Disable transition on hover */
        opacity: 1; /* Keep full opacity */
    }

    .athlete dl {
        display: grid; /* Set display to grid */
        grid-template-columns: auto auto; /* Define grid columns */
        row-gap: 10px; /* Add some spacing between rows */
        opacity: 1; /* Ensure it's fully visible */
        transition: none; /* Disable transition for showing */
    }

    .athlete:hover dl,
    .athlete:focus-within dl {
        display: grid; /* Do not show details on hover */
    }

    #gallery img {
        transition: none; /* Disable transition on hover */
        opacity: 1; /* Keep full opacity */
        animation-name: none;
    }
}

.dark-mode {
    --background-color: var(--dark-background-color);
    --text-color: var(--dark-text-color);
    --link-color: var(--dark-link-color);
    --header-background: var(--dark-header-background);
    --header-text-color: var(--dark-header-text-color);
    --highlight-color: var(--dark-highlight-color);
    --text-highlight: var(--dark-text-highlight);
}

/* user color scheme preference */
@media (prefers-color-scheme: dark) {
    :root {
        --background-color: var(--dark-background-color);
        --text-color: var(--dark-text-color);
        --link-color: var(--dark-link-color);
        --header-background: var(--dark-header-background);
        --header-text-color: var(--dark-header-text-color);
        --highlight-color: var(--dark-highlight-color);
        --text-highlight: var(--dark-text-highlight);
    }
}


/* for when it is a tablet */
@media(min-width: 768px){
    /* increase margins to 50px */
    body{
        margin: 50px;
        font-size: 16px;
    }
    nav{
        margin: -50px -50px;
        padding: 20px 50px;
    }

    footer {
        margin: 0px -50px -50px -50px;
        padding: 20px 50px;
    }

    /* make nav horizontal */
    nav ul{
        display: flex;
        margin: 0;
        padding:0;
        font-size: 16px;
    }
    nav ul li{
        padding:10px;
    }

    header, #team-results{
        margin: 20px -50px;
        padding: 50px;
    }

    header h2{
        font-size: 22px;
    }

    /* show two athletes in a grid */
    .athlete-container {
        display: grid;
        grid-template-columns: auto auto; /*one column to optimize for mobile*/
        justify-content: space-around;
        gap: 20px;
    }

    #individual-results .athlete{
        width: auto;
    }

    .athlete figure img {
        height: 80%;
    }
    /* increase grid to 3 columns */
    #gallery{
        grid-template-columns: repeat(3,1fr);
        margin: 20px;
    }
}

/* for when it is a desktop */
@media(min-width: 1050px){
    body{
        margin: 100px;
        font-size: 20px;
    }
    nav{
        margin: -100px -100px;
        padding: 30px 100px;
    }

    footer{
        margin: 0px -100px -100px -100px;
        padding: 30px 100px;
    }
    nav ul{
        font-size: 20px;
    }

    /* make sure the text is not big on index page */
    #meets ul li a{
        font-size: 18px;
    }

    nav ul li {
        padding-right: 20px;
    }

    header, #team-results{
        margin: 70px -100px;
        padding-left: 100px;
        padding-right: 100px;
    }

    h1{
        font-size: 36px;
    }

    /* increase athelete grid to 4 columns */
    .athlete-container {
        display: grid;
        grid-template-columns: auto auto auto auto; /*one column to optimize for mobile*/
        justify-content: space-around;
        gap: 20px;
    }


    .athlete figure img {
        height: 75%;
    }

    /* increase gallery grid to 4 columns */
    #gallery{
        grid-template-columns: repeat(4,1fr);
        margin-bottom: 80px;
        gap: 30px;
    }
}

